<resources>
    <string name="app_name">getTaxi2</string>
    <string name="register_fullName">Full Name:</string>
    <string name="register_id">ID:</string>
    <string name="register_email">Email:</string>
    <string name="register_ccNumber">Credit Card Number:</string>
    <string name="register_phone">Phone Number:</string>
    <string name="login_button_string">Login</string>
    <string name="register_username">userName:</string>
    <string name="register_password">Password:</string>
    <string name="register_textview">Register</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">my Cab</string>
    <string name="nav_header_subtitle">support@myCab.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_register_button">Register Here</string>
    <string name="welcome_app">"Welcome Back!</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
