<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.MainActivity"
    >

    <EditText
        android:id="@+id/email_editext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textPersonName"
        android:textColor="@color/wine" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/wine" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/aladin"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login_button_string"
        android:textColor="@color/yellow"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="117dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:background="@android:color/background_light"
        android:text="Register here" />

</RelativeLayout>